# fastapi-web-app

./: .ctagsignore  .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  config.ctags  pyproject.toml  pyrightconfig.json
db/: pypi.sqlite
server/nginx/: weather.nginx
server/scripts/: server_setup.sh
src/fastapi_web_app/: config.py  main.py
src/fastapi_web_app/data/: __all_models.py  db_session.py  modelbase.py  package.py  release.py  user.py
src/fastapi_web_app/infrastructure/: cookie_auth.py  num_convert.py
src/fastapi_web_app/services/: packages.py  user_service.py  users.py
src/fastapi_web_app/static/: site.css
src/fastapi_web_app/static/css/: account.css
src/fastapi_web_app/templates/home/: index.pt
src/fastapi_web_app/templates/shared/: _layout.pt
src/fastapi_web_app/view_models/: account.py  base.py  details.py  index.py
src/fastapi_web_app/view_models/home/: index.py
src/fastapi_web_app/viewmodels/home/: indexviewmodel.py
src/fastapi_web_app/viewmodels/shared/: viewmodel.py
src/fastapi_web_app/views/: account.py  home.py  packages.py
src/templates/home/: index.pt
templates/account/: index.html  login.html  register.html
templates/home/: about.html  about.pt  index.html
templates/shared/: _layout.html  _layout.pt
