[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py38"]


[tool.isort]
atomic = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
skip_gitignore = true
src_paths = ["src"]
virtual_env = ".venv/bin/python"


[tool.poetry]
name = "fastapi-web-app"
version = "0.0.0"
description = "TalkPython's Full Web Apps with FastAPI course"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.3"
aiofiles = "^0.6"
aiosqlite = "^0.17"
chameleon = "^3.9"
fastapi = "^0.63"
gitpython = "^3.1"
loguru = "^0.5"
passlib = "^1.7"
progressbar2 = "^3.53"
python-dateutil = "^2.8.1"
python-multipart = "^0.0"
sqlalchemy = "^1.4"
uvicorn = "^0.13"
fastapi-chameleon = { git = "https://github.com/mikeckennedy/fastapi-chameleon.git", branch = "main" }

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0"
pre-commit = "^2.12"
pytest = "^6.2"
pytest-xdist = "^2.2"


[tool.pytest.ini_options]
addopts = ["-q", "-rsxX", "--color=yes", "--strict-markers"]
minversion = 6.0
looponfailroots = ["src"]
testpaths = ["src/tests"]
xfail_strict = true

log_level = "WARNING"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = """\
  [%(asctime)s.%(msecs)03d] [%(levelno)d] [%(name)s:%(funcName)s] \
  [%(process)d]\n%(msg)s"""
log_cli_level = "WARNING"
